--- a/classes/notemptyvalidator.html
+++ b/classes/notemptyvalidator.html
@@ -225,13 +225,13 @@
 				<a name="constructor" class="tsd-anchor"></a>
 				<h3>constructor</h3>
 				<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">new <wbr>Not<wbr>Empty<wbr>Validator<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="notemptyvalidator.html" class="tsd-signature-type">NotEmptyValidator</a></li>
+					<li class="tsd-signature tsd-kind-icon">new <wbr>Not<wbr>Empty<wbr>Validator<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="notemptyvalidator.html" class="tsd-signature-type">NotEmptyValidator</a></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L53">validator.ts:53</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator.ts#L53">validator.ts:53</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -240,7 +240,7 @@
 								<h5>name: <span class="tsd-signature-type">string</span></h5>
 							</li>
 							<li>
-								<h5>value: <span class="tsd-signature-type">string</span></h5>
+								<h5><span class="tsd-flag ts-flagOptional">Optional</span> value: <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></h5>
 							</li>
 						</ul>
 						<h4 class="tsd-returns-title">Returns <a href="notemptyvalidator.html" class="tsd-signature-type">NotEmptyValidator</a></h4>
@@ -256,17 +256,17 @@
 				<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L52">validator.ts:52</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator.ts#L52">validator.ts:52</a></li>
 					</ul>
 				</aside>
 			</section>
 			<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 				<a name="value" class="tsd-anchor"></a>
-				<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> value</h3>
-				<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+				<h3><span class="tsd-flag ts-flagOptional">Optional</span> <span class="tsd-flag ts-flagReadonly">Readonly</span> value</h3>
+				<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L53">validator.ts:53</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator.ts#L53">validator.ts:53</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -284,7 +284,7 @@
 						<aside class="tsd-sources">
 							<p>Implementation of <a href="../interfaces/validator.html">Validator</a>.<a href="../interfaces/validator.html#validate">validate</a></p>
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L60">validator.ts:60</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator.ts#L60">validator.ts:60</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <a href="../globals.html#validationresult" class="tsd-signature-type">ValidationResult</a></h4>
