--- a/globals.html
+++ b/globals.html
@@ -451,7 +451,7 @@
 				<div class="tsd-signature tsd-kind-icon">Report<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>actual<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>attribute<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>expected<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>rawValue<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L8">validator.ts:8</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator.ts#L8">validator.ts:8</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-type-declaration">
@@ -478,7 +478,7 @@
 				<div class="tsd-signature tsd-kind-icon">Validation<wbr>Result<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>isValid<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span>report<span class="tsd-signature-symbol">: </span><a href="globals.html#report" class="tsd-signature-type">Report</a><span class="tsd-signature-symbol"> }</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L3">validator.ts:3</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator.ts#L3">validator.ts:3</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-type-declaration">
@@ -502,7 +502,7 @@
 				<div class="tsd-signature tsd-kind-icon">Alphanumeric<wbr>Lower<wbr>Req<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = new RegExp(&#x27;^[0-9a-z]*$&#x27;)</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L31">regexp.ts:31</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L31">regexp.ts:31</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -517,7 +517,7 @@
 				<div class="tsd-signature tsd-kind-icon">Alphanumeric<wbr>Req<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = new RegExp(&#x27;^[a-zA-Z0-9]*$&#x27;)</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L21">regexp.ts:21</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L21">regexp.ts:21</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -532,7 +532,7 @@
 				<div class="tsd-signature tsd-kind-icon">Ascii<wbr>Reg<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = new RegExp(&#x27;^[\\u0020-\\u007E]+$&#x27;)</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L36">regexp.ts:36</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L36">regexp.ts:36</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -547,7 +547,7 @@
 				<div class="tsd-signature tsd-kind-icon">Cfn<wbr>Stack<wbr>Name<wbr>Reg<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = new RegExp(&#x27;^[A-Za-z][A-Za-z0-9-]*$&#x27;)</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L11">regexp.ts:11</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L11">regexp.ts:11</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -562,7 +562,7 @@
 				<div class="tsd-signature tsd-kind-icon">Html<wbr>Color<wbr>Reg<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = /(#(?:[0-9a-f]{2}){2,4}$|(#[0-9a-f]{3}$)|(rgb|hsl)a?\((-?\d+%?[,\s]+){2,3}\s*[\d.]+%?\)$|black$|silver$|gray$|whitesmoke$|maroon$|red$|purple$|fuchsia$|green$|lime$|olivedrab$|yellow$|navy$|blue$|teal$|aquamarine$|orange$|aliceblue$|antiquewhite$|aqua$|azure$|beige$|bisque$|blanchedalmond$|blueviolet$|brown$|burlywood$|cadetblue$|chartreuse$|chocolate$|coral$|cornflowerblue$|cornsilk$|crimson$|currentcolor$|darkblue$|darkcyan$|darkgoldenrod$|darkgray$|darkgreen$|darkgrey$|darkkhaki$|darkmagenta$|darkolivegreen$|darkorange$|darkorchid$|darkred$|darksalmon$|darkseagreen$|darkslateblue$|darkslategray$|darkslategrey$|darkturquoise$|darkviolet$|deeppink$|deepskyblue$|dimgray$|dimgrey$|dodgerblue$|firebrick$|floralwhite$|forestgreen$|gainsboro$|ghostwhite$|goldenrod$|gold$|greenyellow$|grey$|honeydew$|hotpink$|indianred$|indigo$|ivory$|khaki$|lavenderblush$|lavender$|lawngreen$|lemonchiffon$|lightblue$|lightcoral$|lightcyan$|lightgoldenrodyellow$|lightgray$|lightgreen$|lightgrey$|lightpink$|lightsalmon$|lightseagreen$|lightskyblue$|lightslategray$|lightslategrey$|lightsteelblue$|lightyellow$|limegreen$|linen$|mediumaquamarine$|mediumblue$|mediumorchid$|mediumpurple$|mediumseagreen$|mediumslateblue$|mediumspringgreen$|mediumturquoise$|mediumvioletred$|midnightblue$|mintcream$|mistyrose$|moccasin$|navajowhite$|oldlace$|olive$|orangered$|orchid$|palegoldenrod$|palegreen$|paleturquoise$|palevioletred$|papayawhip$|peachpuff$|peru$|pink$|plum$|powderblue$|rosybrown$|royalblue$|saddlebrown$|salmon$|sandybrown$|seagreen$|seashell$|sienna$|skyblue$|slateblue$|slategray$|slategrey$|snow$|springgreen$|steelblue$|tan$|thistle$|tomato$|transparent$|turquoise$|violet$|wheat$|white$|yellowgreen$|rebeccapurple$)/i</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L41">regexp.ts:41</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L41">regexp.ts:41</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -577,7 +577,7 @@
 				<div class="tsd-signature tsd-kind-icon">Number<wbr>Reg<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = new RegExp(&#x27;^[0-9]+$&#x27;)</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L16">regexp.ts:16</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L16">regexp.ts:16</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -592,7 +592,7 @@
 				<div class="tsd-signature tsd-kind-icon">UUIDv4<wbr>Reg<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = new RegExp(&#x27;[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}&#x27;,)</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L4">regexp.ts:4</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L4">regexp.ts:4</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -607,7 +607,7 @@
 				<div class="tsd-signature tsd-kind-icon">Utf8<wbr>Zenkaku<wbr>And<wbr>Return<wbr>Reg<wbr>Exp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = new RegExp(&#x27;^[^ -~｡-ﾟ]+$&#x27;)</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/regexp.ts#L26">regexp.ts:26</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/regexp.ts#L26">regexp.ts:26</a></li>
 					</ul>
 				</aside>
 				<div class="tsd-comment tsd-typography">
@@ -629,7 +629,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L130">validator-factory.ts:130</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L130">validator-factory.ts:130</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -666,7 +666,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L182">validator-factory.ts:182</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L182">validator-factory.ts:182</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -694,7 +694,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L99">validator-factory.ts:99</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L99">validator-factory.ts:99</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -728,7 +728,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L166">validator-factory.ts:166</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L166">validator-factory.ts:166</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -759,7 +759,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L175">validator-factory.ts:175</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L175">validator-factory.ts:175</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -796,7 +796,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L25">validator-factory.ts:25</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L25">validator-factory.ts:25</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -849,7 +849,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L123">validator-factory.ts:123</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L123">validator-factory.ts:123</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -880,7 +880,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L84">validator-factory.ts:84</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L84">validator-factory.ts:84</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -917,7 +917,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L112">validator-factory.ts:112</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L112">validator-factory.ts:112</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -945,13 +945,13 @@
 				<a name="notemptyvalidator" class="tsd-anchor"></a>
 				<h3>not<wbr>Empty<wbr>Validator</h3>
 				<ul class="tsd-signatures tsd-kind-function">
-					<li class="tsd-signature tsd-kind-icon">not<wbr>Empty<wbr>Validator<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="interfaces/validator.html" class="tsd-signature-type">Validator</a></li>
+					<li class="tsd-signature tsd-kind-icon">not<wbr>Empty<wbr>Validator<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="interfaces/validator.html" class="tsd-signature-type">Validator</a></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L53">validator-factory.ts:53</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L53">validator-factory.ts:53</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -965,7 +965,7 @@
 								<h5>name: <span class="tsd-signature-type">string</span></h5>
 							</li>
 							<li>
-								<h5>value: <span class="tsd-signature-type">string</span></h5>
+								<h5><span class="tsd-flag ts-flagOptional">Optional</span> value: <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></h5>
 							</li>
 						</ul>
 						<h4 class="tsd-returns-title">Returns <a href="interfaces/validator.html" class="tsd-signature-type">Validator</a></h4>
@@ -982,7 +982,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L148">validator-factory.ts:148</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L148">validator-factory.ts:148</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -1019,7 +1019,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L69">validator-factory.ts:69</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L69">validator-factory.ts:69</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -1056,7 +1056,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L189">validator-factory.ts:189</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L189">validator-factory.ts:189</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -1078,13 +1078,13 @@
 				<a name="uuidv4checkvalidator" class="tsd-anchor"></a>
 				<h3>uuid<wbr>V4Check<wbr>Validator</h3>
 				<ul class="tsd-signatures tsd-kind-function">
-					<li class="tsd-signature tsd-kind-icon">uuid<wbr>V4Check<wbr>Validator<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="interfaces/validator.html" class="tsd-signature-type">Validator</a></li>
+					<li class="tsd-signature tsd-kind-icon">uuid<wbr>V4Check<wbr>Validator<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="interfaces/validator.html" class="tsd-signature-type">Validator</a></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator-factory.ts#L60">validator-factory.ts:60</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/0cdbda4/src/validator-factory.ts#L60">validator-factory.ts:60</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -1098,7 +1098,7 @@
 								<h5>name: <span class="tsd-signature-type">string</span></h5>
 							</li>
 							<li>
-								<h5>value: <span class="tsd-signature-type">string</span></h5>
+								<h5><span class="tsd-flag ts-flagOptional">Optional</span> value: <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></h5>
 							</li>
 						</ul>
 						<h4 class="tsd-returns-title">Returns <a href="interfaces/validator.html" class="tsd-signature-type">Validator</a></h4>
